sonarqube-openshift-docker-master/yaml/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    description: Route for SonarQube's http service.
  creationTimestamp: null
  labels:
    app: sonarqube
  name: sonarqube
  namespace: sonarqube
spec:
  host: sonarqube-myproject.192.168.64.3.nip.io
  to:
    kind: Service
    name: sonarqube
    weight: 100
  wildcardPolicy: None
status:
  ingress: null
